--- a/index.html
+++ b/index.html
@@ -7,32 +7,32 @@
     <!-- Tailwind CSS via CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100 min-h-screen py-8">
-    <div class="container mx-auto px-4 max-w-md">
-        <h1 class="text-3xl font-bold text-center mb-8 text-gray-800">Todo App</h1>
+<body class="bg-gray-100 min-h-screen py-8 flex items-center justify-center">
+    <div class="container mx-auto px-4 max-w-lg sm:max-w-xl md:max-w-2xl">
+        <h1 class="text-3xl md:text-4xl font-bold text-center mb-8 text-gray-800">Todo App</h1>
         
         <!-- Add Task Form -->
         <div class="bg-white rounded-lg shadow-md p-6 mb-6">
-            <div class="flex mb-4">
+            <div class="flex flex-col sm:flex-row gap-2">
                 <input type="text" id="taskInput" placeholder="What needs to be done?" 
-                    class="flex-1 border border-gray-300 rounded-l-lg py-2 px-4 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent">
+                    class="flex-1 border border-gray-300 rounded-lg py-2 px-4 focus:outline-none focus:ring-2 focus:ring-blue-500">
                 <button id="addTaskBtn" 
-                    class="bg-blue-500 hover:bg-blue-600 text-white font-medium py-2 px-4 rounded-r-lg transition duration-200">
+                    class="bg-blue-500 hover:bg-blue-600 text-white font-medium py-2 px-4 rounded-lg transition duration-200 w-full sm:w-auto">
                     Add
                 </button>
             </div>
             
             <!-- Edit Task Form (Hidden by default) -->
-            <div id="editTaskForm" class="hidden mb-4">
-                <div class="flex">
+            <div id="editTaskForm" class="hidden mt-4">
+                <div class="flex flex-col sm:flex-row gap-2">
                     <input type="text" id="editTaskInput" 
-                        class="flex-1 border border-gray-300 rounded-l-lg py-2 px-4 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent">
+                        class="flex-1 border border-gray-300 rounded-lg py-2 px-4 focus:outline-none focus:ring-2 focus:ring-blue-500">
                     <button id="updateTaskBtn" 
-                        class="bg-green-500 hover:bg-green-600 text-white font-medium py-2 px-4 rounded-r-lg transition duration-200">
+                        class="bg-green-500 hover:bg-green-600 text-white font-medium py-2 px-4 rounded-lg transition duration-200 w-full sm:w-auto">
                         Update
                     </button>
                     <button id="cancelEditBtn" 
-                        class="bg-gray-500 hover:bg-gray-600 text-white font-medium py-2 px-4 rounded-r-lg transition duration-200 ml-2">
+                        class="bg-gray-500 hover:bg-gray-600 text-white font-medium py-2 px-4 rounded-lg transition duration-200 w-full sm:w-auto">
                         Cancel
                     </button>
                 </div>
